Refactor code structure for improved readability and maintainability

--- a/home.html
+++ b/home.html
@@ -30,11 +30,10 @@
     <nav id="site-header" class="floating-nav">
       <div class="nav-container">
         <a href="home.html" class="brand" data-animate="slide-right">
-          <img
-            src="img/no bg logos/logomarknobg.png"
-            alt="Infinite Pixels Logo"
-            class="brand-logo-img"
-          />
+          <picture>
+            <source srcset="img/no bg logos/logomarknobg.webp" type="image/webp">
+            <img src="img/no bg logos/logomarknobg.png" alt="Infinite Pixels Logo" class="brand-logo-img" width="48" height="48" loading="lazy" />
+          </picture>
           <span class="brand-divider"></span>
           <span class="brand-tagline">Digital Solutions</span>
         </a>
@@ -736,9 +735,10 @@
             <div class="work-card" data-animate="fade-up">
               <div class="work-image natural-fit">
                 <img
-                  src="img/projects/image-1760566359881.png"
-                  alt="Dr. Naglaa Clinic Website"
-                />
+                  <picture>
+                    <source srcset="img/projects/image-1760566359881.webp" type="image/webp">
+                    <img src="img/projects/image-1760566359881.png" alt="Dr. Naglaa Clinic Website" width="600" height="400" loading="lazy" />
+                  </picture>
                 <div class="work-gradient"></div>
                 <div class="work-overlay">
                   <a
@@ -783,9 +783,10 @@
             <div class="work-card" data-animate="fade-up" data-delay=".1s">
               <div class="work-image natural-fit">
                 <img
-                  src="img/projects/image-1760566337057.png"
-                  alt="Teacher Ahmed Fadl Platform"
-                />
+                  <picture>
+                    <source srcset="img/projects/image-1760566337057.webp" type="image/webp">
+                    <img src="img/projects/image-1760566337057.png" alt="Teacher Ahmed Fadl Platform" width="600" height="400" loading="lazy" />
+                  </picture>
                 <div class="work-gradient"></div>
                 <div class="work-overlay">
                   <a
@@ -1030,10 +1031,10 @@
           <div class="footer-brand">
             <div class="brand">
               <img
-                src="img/no bg logos/logomark2nobg.png"
-                alt="Infinite Pixels Logo"
-                class="footer-logo-img"
-              />
+                <picture>
+                  <source srcset="img/no bg logos/logomark2nobg.webp" type="image/webp">
+                  <img src="img/no bg logos/logomark2nobg.png" alt="Infinite Pixels Logo" class="footer-logo-img" width="48" height="48" loading="lazy" />
+                </picture>
             </div>
             <p class="footer-tagline">
               Crafting digital experiences that scale beyond imagination.
