Update contact email address in the footer

--- a/home.html
+++ b/home.html
@@ -951,7 +951,7 @@
           >
             <!-- Email Card -->
             <a
-              href="mailto:infinitepixels2025@gmail.com"
+              href="mailto:info@infinitepixelstech.com"
               class="contact-card primary-card"
             >
               <div class="contact-card-icon">
@@ -972,7 +972,7 @@
               <h3 class="contact-card-title">Send us an Email</h3>
               <p class="contact-card-desc">Get a response within 24 hours</p>
               <span class="contact-card-value"
-                >infinitepixels2025@gmail.com</span
+                >info@infinitepixelstech.com</span
               >
               <div class="contact-card-arrow">→</div>
             </a>
