Implement multiple code changes to enhance functionality and improve performance

--- a/home.html
+++ b/home.html
@@ -24,6 +24,39 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+      <!-- SEO Meta Tags -->
+      <meta name="description" content="Infinite Pixels is a startup digital agency delivering modern web design, branding, automation, and digital solutions for real business growth. Fast, affordable, and focused on results." />
+      <meta name="keywords" content="digital agency, web design, branding, automation, social media, Infinite Pixels, startup, business growth, affordable, fast delivery" />
+      <meta name="author" content="Infinite Pixels" />
+
+      <!-- Open Graph Meta Tags -->
+      <meta property="og:title" content="Infinite Pixels — Digital Experiences That Scale" />
+      <meta property="og:description" content="Startup agency delivering modern web design, branding, automation, and digital solutions. Fast, affordable, and focused on results." />
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://infinitepixels.com/" />
+      <meta property="og:image" content="img/no bg logos/logomarknobg.png" />
+
+      <!-- Twitter Card Meta Tags -->
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:title" content="Infinite Pixels — Digital Experiences That Scale" />
+      <meta name="twitter:description" content="Startup agency delivering modern web design, branding, automation, and digital solutions. Fast, affordable, and focused on results." />
+      <meta name="twitter:image" content="img/no bg logos/logomarknobg.png" />
+
+      <!-- Structured Data: Organization -->
+      <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Infinite Pixels",
+        "url": "https://infinitepixels.com/",
+        "logo": "img/no bg logos/logomarknobg.png",
+        "sameAs": [
+          "https://www.facebook.com/infinitepixels",
+          "https://www.instagram.com/infinitepixels",
+          "https://www.linkedin.com/company/infinitepixels"
+        ]
+      }
+      </script>
   </head>
   <body>
     <!-- Floating Navigation -->
