Remove Aurora.js script references from multiple HTML files

--- a/process.html
+++ b/process.html
@@ -690,6 +690,6 @@
 		</footer>
 
 		<script src="logic.js" defer></script>
-		<script src="js/Aurora.js"></script>
+		<!-- <script src="js/Aurora.js"></script> -->
 	</body>
 </html>
