--- a/home.html
+++ b/home.html
@@ -1137,6 +1137,6 @@
     </footer>
 
     <script src="logic.js" defer></script>
-    <script src="js/Aurora.js"></script>
+    <!-- <script src="js/Aurora.js"></script> -->
   </body>
 </html>
