--- a/services.html
+++ b/services.html
@@ -1105,7 +1105,7 @@
 		</footer>
 
 		<script src="logic.js" defer></script>
-		<script src="js/Aurora.js"></script>
+		<!-- <script src="js/Aurora.js"></script> -->
 		<script src="js/faq-typewriter.js"></script>
 	</body>
 </html>
