--- a/work.html
+++ b/work.html
@@ -745,6 +745,6 @@
 		<script src="logic.js" defer></script>
 		<script src="js/Aurora.js"></script>
 		<script src="logic.js" defer></script>
-		<script src="js/Aurora.js"></script>
+		<!-- <script src="js/Aurora.js"></script> -->
 	</body>
 </html>
