Refactor code structure for improved readability and maintainability

--- a/work.html
+++ b/work.html
@@ -743,6 +743,7 @@
 			</div>
 		</footer>
 		<script src="logic.js" defer></script>
+		<!-- <script src="js/Aurora.js"></script> -->
 		<script src="js/Aurora.js"></script>
 		<script src="logic.js" defer></script>
 		<!-- <script src="js/Aurora.js"></script> -->
