--- a/about.html
+++ b/about.html
@@ -803,5 +803,6 @@
 		<script src="logic.js" defer></script>
 		<script src="js/ScrollStack.js"></script>
 		<!-- <script src="js/Aurora.js"></script> -->
+		<script src="js/Aurora.js"></script>
 	</body>
 </html>
