--- a/home.html
+++ b/home.html
@@ -1138,5 +1138,6 @@
 
     <script src="logic.js" defer></script>
     <!-- <script src="js/Aurora.js"></script> -->
+    <script src="js/Aurora.js"></script>
   </body>
 </html>
