--- a/process.html
+++ b/process.html
@@ -691,5 +691,6 @@
 
 		<script src="logic.js" defer></script>
 		<!-- <script src="js/Aurora.js"></script> -->
+		<script src="js/Aurora.js"></script>
 	</body>
 </html>
