--- a/services.html
+++ b/services.html
@@ -1106,6 +1106,7 @@
 
 		<script src="logic.js" defer></script>
 		<!-- <script src="js/Aurora.js"></script> -->
+		<script src="js/Aurora.js"></script>
 		<script src="js/faq-typewriter.js"></script>
 	</body>
 </html>
