--- a/process.html
+++ b/process.html
@@ -64,6 +64,12 @@
 		</script>
 	</head>
 	<body>
+	<video id="bg-video-light" class="bg-video" autoplay loop muted playsinline poster="">
+		<source src="vid/light mode bg - Made with Clipchamp.mp4" type="video/mp4">
+	</video>
+	<video id="bg-video-dark" class="bg-video" autoplay loop muted playsinline poster="">
+		<source src="vid/dark mode bg - Made with Clipchamp.mp4" type="video/mp4">
+	</video>
 		<!-- Skip Navigation for Accessibility -->
 		<a href="#main-content" class="skip-nav" style="position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden;z-index:100;" onfocus="this.style.left='0';this.style.width='auto';this.style.height='auto';">Skip to main content</a>
 		<!-- Floating Navigation -->
@@ -692,4 +698,29 @@
 		<script src="logic.js" defer></script>
 		<!-- <script src="js/Aurora.js"></script> -->
 	</body>
+	<script>
+		function isDarkMode() {
+			return document.body.classList.contains('dark') ||
+				document.body.classList.contains('dark-mode') ||
+				document.body.getAttribute('data-theme') === 'dark' ||
+				document.documentElement.classList.contains('dark');
+		}
+		function updateBgVideos() {
+			const light = document.getElementById('bg-video-light');
+			const dark = document.getElementById('bg-video-dark');
+			if (!light || !dark) return;
+			if (isDarkMode()) {
+				light.style.opacity = 0;
+				dark.style.opacity = 1;
+			} else {
+				light.style.opacity = 1;
+				dark.style.opacity = 0;
+			}
+		}
+		updateBgVideos();
+		const observer = new MutationObserver(updateBgVideos);
+		observer.observe(document.body, { attributes: true, attributeFilter: ['class', 'data-theme'] });
+		observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
+		document.getElementById('themeToggle')?.addEventListener('click', () => setTimeout(updateBgVideos, 100));
+	</script>
 </html>
