Add fetchpriority attribute to brand logo image for improved loading performance

--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
         <a href="home.html" class="brand" data-animate="slide-right">
           <picture>
             <source srcset="img/no bg logos/logomarknobg.webp" type="image/webp">
-            <img src="img/no bg logos/logomarknobg.png" alt="Infinite Pixels Logo - Home" class="brand-logo-img" width="48" height="48" loading="lazy" />
+            <img src="img/no bg logos/logomarknobg.png" alt="Infinite Pixels Logo - Home" class="brand-logo-img" width="48" height="48" fetchpriority="high" />
           </picture>
           <span class="brand-divider"></span>
           <span class="brand-tagline">Digital Solutions</span>
