Add aria-labels and link text for improved accessibility on external links

--- a/home.html
+++ b/home.html
@@ -820,7 +820,9 @@
                   href="https://drnaglaaclinic.netlify.app/"
                   target="_blank"
                   class="work-link"
+                  aria-label="Visit Dr. Naglaa Clinic Website"
                 >
+                  Visit Dr. Naglaa Clinic Website
                 </a>
               </div>
             </div>
@@ -868,7 +870,9 @@
                   href="https://ahmedfadl.com/"
                   target="_blank"
                   class="work-link"
+                  aria-label="Visit Teacher Ahmed Fadl Platform"
                 >
+                  Visit Teacher Ahmed Fadl Platform
                 </a>
               </div>
             </div>
