Refactor video backgrounds for light/dark mode with improved loading performance and remove unused Aurora.js file

--- a/services.html
+++ b/services.html
@@ -67,10 +67,10 @@
 		</script>
 	</head>
 	<body>
-	<video id="bg-video-light" class="bg-video" autoplay loop muted playsinline poster="" preload="auto">
+	<video id="bg-video-light" class="bg-video" autoplay loop muted playsinline preload="auto">
 		<source src="vid/light mode bg - Made with Clipchamp.mp4" type="video/mp4">
 	</video>
-	<video id="bg-video-dark" class="bg-video" autoplay loop muted playsinline poster="" preload="auto">
+	<video id="bg-video-dark" class="bg-video" autoplay loop muted playsinline preload="auto">
 		<source src="vid/dark mode bg - Made with Clipchamp.mp4" type="video/mp4">
 	</video>
 		<!-- Skip Navigation for Accessibility -->
@@ -1111,7 +1111,6 @@
 		</footer>
 
 		<script src="logic.js" defer></script>
-		<!-- <script src="js/Aurora.js"></script> -->
 		<script src="js/faq-typewriter.js"></script>
 	</body>
 </html>
