--- a/home.html
+++ b/home.html
@@ -59,16 +59,11 @@
       </script>
   </head>
   <body>
-  <!-- Static image fallback for mobile, video for desktop -->
-  <picture id="bg-static-image" class="bg-image">
-    <source srcset="vid/bg-light.webp" type="image/webp" media="(prefers-color-scheme: light)">
-    <source srcset="vid/bg-dark.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-    <img src="vid/bg-light.jpg" alt="Background" style="width:100vw;height:100vh;object-fit:cover;position:fixed;top:0;left:0;z-index:-2;" />
-  </picture>
-  <video id="bg-video-light" class="bg-video" autoplay loop muted playsinline poster="vid/bg-light.jpg" preload="none" style="display:none;">
+  <!-- Background video (enabled on all devices) -->
+  <video id="bg-video-light" class="bg-video" autoplay loop muted playsinline preload="auto">
     <source src="vid/light mode bg - Made with Clipchamp.mp4" type="video/mp4">
   </video>
-  <video id="bg-video-dark" class="bg-video" autoplay loop muted playsinline poster="vid/bg-dark.jpg" preload="none" style="display:none;">
+  <video id="bg-video-dark" class="bg-video" autoplay loop muted playsinline preload="auto">
     <source src="vid/dark mode bg - Made with Clipchamp.mp4" type="video/mp4">
   </video>
   <!-- Skip Navigation for Accessibility -->
@@ -330,7 +325,7 @@
                 ourselves with your project.
               </p>
 
-              <div class="hero-ctas" data-animate="fade-up" data-delay=".3s">
+              <div class="hero-ctas" data-animate="fade-up" data-delay=".1s">
                 <a href="services.html" class="hero-btn hero-btn-primary">
                   <span>Explore Services</span>
                   <svg
@@ -351,7 +346,7 @@
             </div>
 
             <!-- Visual Side -->
-            <div class="hero-visual" data-animate="fade-up" data-delay=".2s">
+            <div class="hero-visual" data-animate="fade-up" data-delay=".1s">
               <div class="visual-grid">
                 <!-- Card 1 - Featured Service -->
                 <div class="visual-card card-featured">
@@ -1151,26 +1146,14 @@
 
     <script src="logic.js" defer></script>
     <script>
-      // Lazy-load video backgrounds only on desktop
-      function enableBgVideoIfDesktop() {
-        var isDesktop = window.matchMedia('(min-width: 768px)').matches;
+      // Ensure background videos are enabled on all devices
+      document.addEventListener('DOMContentLoaded', function() {
         var lightVid = document.getElementById('bg-video-light');
         var darkVid = document.getElementById('bg-video-dark');
-        var staticImg = document.getElementById('bg-static-image');
-        if (isDesktop) {
-          if (lightVid) { lightVid.style.display = ''; lightVid.preload = 'auto'; }
-          if (darkVid) { darkVid.style.display = ''; darkVid.preload = 'auto'; }
-          if (staticImg) staticImg.style.display = 'none';
-        } else {
-          if (lightVid) { lightVid.style.display = 'none'; lightVid.preload = 'none'; }
-          if (darkVid) { darkVid.style.display = 'none'; darkVid.preload = 'none'; }
-          if (staticImg) staticImg.style.display = '';
-        }
-      }
-      window.addEventListener('DOMContentLoaded', enableBgVideoIfDesktop);
-      window.addEventListener('resize', enableBgVideoIfDesktop);
+        if (lightVid) { lightVid.style.display = ''; lightVid.preload = 'auto'; }
+        if (darkVid) { darkVid.style.display = ''; darkVid.preload = 'auto'; }
+      });
     </script>
-    <!-- <script src="js/Aurora.js"></script> -->
 
   </body>
 </html>
