--- a/process.html
+++ b/process.html
@@ -64,10 +64,10 @@
 		</script>
 	</head>
 	<body>
-	<video id="bg-video-light" class="bg-video" autoplay loop muted playsinline poster="" preload="auto">
+	<video id="bg-video-light" class="bg-video" autoplay loop muted playsinline preload="auto">
 		<source src="vid/light mode bg - Made with Clipchamp.mp4" type="video/mp4">
 	</video>
-	<video id="bg-video-dark" class="bg-video" autoplay loop muted playsinline poster="" preload="auto">
+	<video id="bg-video-dark" class="bg-video" autoplay loop muted playsinline preload="auto">
 		<source src="vid/dark mode bg - Made with Clipchamp.mp4" type="video/mp4">
 	</video>
 		<!-- Skip Navigation for Accessibility -->
@@ -696,6 +696,5 @@
 		</footer>
 
 		<script src="logic.js" defer></script>
-		<!-- <script src="js/Aurora.js"></script> -->
 	</body>
 </html>
