--- a/work.html
+++ b/work.html
@@ -65,10 +65,10 @@
 		</script>
 	</head>
 	<body>
-	<video id="bg-video-light" class="bg-video" autoplay loop muted playsinline poster="" preload="auto">
+	<video id="bg-video-light" class="bg-video" autoplay loop muted playsinline preload="auto">
 		<source src="vid/light mode bg - Made with Clipchamp.mp4" type="video/mp4">
 	</video>
-	<video id="bg-video-dark" class="bg-video" autoplay loop muted playsinline poster="" preload="auto">
+	<video id="bg-video-dark" class="bg-video" autoplay loop muted playsinline preload="auto">
 		<source src="vid/dark mode bg - Made with Clipchamp.mp4" type="video/mp4">
 	</video>
 		<!-- Skip Navigation for Accessibility -->
@@ -749,6 +749,5 @@
 			</div>
 		</footer>
 		<script src="logic.js" defer></script>
-		<!-- <script src="js/Aurora.js"></script> -->
 	</body>
 </html>
