Refactor code structure for improved readability and maintainability

--- a/home.html
+++ b/home.html
@@ -51,9 +51,7 @@
         "url": "https://infinitepixels.com/",
         "logo": "img/no bg logos/logomarknobg.png",
         "sameAs": [
-          "https://www.facebook.com/infinitepixels",
-          "https://www.instagram.com/infinitepixels",
-          "https://www.linkedin.com/company/infinitepixels"
+          "https://www.instagram.com/infinitepixels.tech/"
         ]
       }
       </script>
@@ -874,6 +872,54 @@
                 </a>
               </div>
             </div>
+            <!-- Wolf Pack MMA Gym Project -->
+            <div class="work-card" data-animate="fade-up" data-delay=".2s">
+              <div class="work-image natural-fit">
+                <picture>
+                    <img src="img/projects/wolfpack.png" alt="Wolf Pack MMA Gym Website" width="600" height="400" loading="lazy" />
+                </picture>
+                <div class="work-gradient"></div>
+                <div class="work-overlay">
+                  <a
+                    href="https://wolfpackeg.com/"
+                    target="_blank"
+                    class="overlay-link"
+                    aria-label="Visit Wolf Pack MMA Gym Website"
+                  >
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                    >
+                      <line x1="5" y1="12" x2="19" y2="12" />
+                      <polyline points="12 5 19 12 12 19" />
+                    </svg>
+                  </a>
+                </div>
+              </div>
+              <div class="work-content">
+                <div class="work-meta">
+                  <span class="work-category">GYM WEBSITE</span>
+                  <span class="work-year">2025</span>
+                </div>
+                <h3 class="work-title">Wolf Pack MMA Gym</h3>
+                <p class="work-description">
+                  Website for Wolf Pack MMA Gym with class schedules, trainer
+                  profiles, membership details, and contact integration.
+                </p>
+                <a
+                  href="https://wolfpackeg.com/"
+                  target="_blank"
+                  class="work-link"
+                  aria-label="Visit Wolf Pack MMA Gym Website"
+                >
+                  Visit Wolf Pack MMA Gym Website
+                </a>
+              </div>
+            </div>
           </div>
 
           <div class="section-cta" data-animate="fade-up" data-delay=".2s">
@@ -1088,7 +1134,7 @@
             </p>
             <div class="footer-social">
               <a
-                href="https://www.instagram.com/infinitepixelsagency/"
+                href="https://www.instagram.com/infinitepixels.tech/"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="instagram-link"
