--- a/work.html
+++ b/work.html
@@ -423,7 +423,45 @@
 								>
 							</div>
 						</div>
-					</div>
+							<!-- Project 3 - Wolf Pack MMA Gym -->
+							<div
+								class="portfolio-item"
+								data-category="gym website"
+								data-animate="fade-up"
+								data-delay=".2s">
+								<div class="portfolio-image">
+									<img src="img/projects/wolfpack.png" alt="Wolf Pack MMA Gym Website" />
+									<div class="portfolio-overlay">
+										<div class="portfolio-info">
+											<h3>Wolf Pack MMA Gym</h3>
+											<p>Gym & MMA Training Website</p>
+											<div class="portfolio-tags">
+												<span>Fitness</span>
+												<span>Gym</span>
+												<span>Membership</span>
+											</div>
+										</div>
+										<div class="portfolio-actions">
+											<a href="https://wolfpackeg.com/" target="_blank" class="portfolio-link" aria-label="Visit website">
+												<svg viewBox="0 0 24 24" fill="currentColor">
+													<path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" />
+												</svg>
+											</a>
+										</div>
+									</div>
+								</div>
+								<div class="portfolio-details">
+									<div class="portfolio-meta">
+										<span class="category">GYM WEBSITE</span>
+										<span class="year">2025</span>
+									</div>
+									<h3>Wolf Pack MMA Gym</h3>
+									<p>
+										Custom website built for Wolf Pack MMA Gym featuring class schedules, trainer profiles, membership sign-ups, and contact integration.
+									</p>
+									<a href="https://wolfpackeg.com/" target="_blank" class="btn-secondary">Visit Website</a>
+								</div>
+							</div>
 				</div>
 			</section>
 
@@ -476,7 +514,7 @@
 									menu presentations, reservation systems, and premium culinary
 									experiences.
 								</p>
-								<a href="#" class="btn-secondary">View Demo</a>
+								<a href="https://eclat-resto.netlify.app/" class="btn-secondary">View Demo</a>
 							</div>
 						</div>
 
@@ -521,7 +559,7 @@
 									strategies, content creation services, and digital marketing
 									solutions.
 								</p>
-								<a href="#" class="btn-secondary">View Demo</a>
+								<a href="https://velaro-smma.netlify.app/" class="btn-secondary">View Demo</a>
 							</div>
 						</div>
 
@@ -563,7 +601,7 @@
 									Modern fitness center demo featuring membership plans, class
 									schedules, trainer profiles, and fitness program showcases.
 								</p>
-								<a href="#" class="btn-secondary">View Demo</a>
+								<a href="https://xhale-gym.netlify.app/" class="btn-secondary">View Demo</a>
 							</div>
 						</div>
 
@@ -608,7 +646,7 @@
 									displays, chef specialties, and elegant reservation
 									experience.
 								</p>
-								<a href="#" class="btn-secondary">View Demo</a>
+								<a href="https://mdresturant.netlify.app/" class="btn-secondary">View Demo</a>
 							</div>
 						</div>
 
@@ -653,7 +691,7 @@
 									treatments, skincare services, and appointment booking
 									systems.
 								</p>
-								<a href="#" class="btn-secondary">View Demo</a>
+								<a href="https://bellabeautyclinic.netlify.app/" class="btn-secondary">View Demo</a>
 							</div>
 						</div>
 					</div>
@@ -695,7 +733,7 @@
 						</p>
 						<div class="footer-social">
 							<a
-								href="https://www.instagram.com/infinitepixelsagency/"
+								href="https://www.instagram.com/infinitepixels.tech/"
 								target="_blank"
 								rel="noopener noreferrer"
 								class="instagram-link"
