--- a/about.html
+++ b/about.html
@@ -753,7 +753,7 @@
 						</p>
 						<div class="footer-social">
 							<a
-								href="https://www.instagram.com/infinitepixelsagency/"
+								href="https://www.instagram.com/infinitepixels.tech/"
 								target="_blank"
 								rel="noopener noreferrer"
 								class="instagram-link"
