--- a/services.html
+++ b/services.html
@@ -1057,7 +1057,7 @@
 						</p>
 						<div class="footer-social">
 							<a
-								href="https://www.instagram.com/infinitepixelsagency/"
+								href="https://www.instagram.com/infinitepixels.tech/"
 								target="_blank"
 								rel="noopener noreferrer"
 								class="instagram-link"
