Add target="_blank" to demo links for improved user experience

--- a/work.html
+++ b/work.html
@@ -514,7 +514,7 @@
 									menu presentations, reservation systems, and premium culinary
 									experiences.
 								</p>
-								<a href="https://eclat-resto.netlify.app/" class="btn-secondary">View Demo</a>
+								<a href="https://eclat-resto.netlify.app/"  target="_blank" class="btn-secondary">View Demo</a>
 							</div>
 						</div>
 
@@ -559,7 +559,7 @@
 									strategies, content creation services, and digital marketing
 									solutions.
 								</p>
-								<a href="https://velaro-smma.netlify.app/" class="btn-secondary">View Demo</a>
+								<a href="https://velaro-smma.netlify.app/" target="_blank"  class="btn-secondary">View Demo</a>
 							</div>
 						</div>
 
@@ -601,7 +601,7 @@
 									Modern fitness center demo featuring membership plans, class
 									schedules, trainer profiles, and fitness program showcases.
 								</p>
-								<a href="https://xhale-gym.netlify.app/" class="btn-secondary">View Demo</a>
+								<a href="https://xhale-gym.netlify.app/" target="_blank" class="btn-secondary">View Demo</a>
 							</div>
 						</div>
 
@@ -646,7 +646,7 @@
 									displays, chef specialties, and elegant reservation
 									experience.
 								</p>
-								<a href="https://mdresturant.netlify.app/" class="btn-secondary">View Demo</a>
+								<a href="https://mdresturant.netlify.app/"  target="_blank" class="btn-secondary">View Demo</a>
 							</div>
 						</div>
 
@@ -691,7 +691,7 @@
 									treatments, skincare services, and appointment booking
 									systems.
 								</p>
-								<a href="https://bellabeautyclinic.netlify.app/" class="btn-secondary">View Demo</a>
+								<a href="https://bellabeautyclinic.netlify.app/"  target="_blank" class="btn-secondary">View Demo</a>
 							</div>
 						</div>
 					</div>
